[package]
name = "mtg-spoilers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
futures = "0.3.25"
lazy_static = "1.4.0"
pin-project = "1.0.12"
reqwest = "0.11.12"
scraper = "0.13.0"
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["fs", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "fs", "rt-multi-thread", "rt"] }
