[package]
name = "mtg-spoilers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
futures = "0.3.25"
log = "0.4.17"
pin-project = "1.0.12"
reqwest = "0.11.12"
scraper = "0.13.0"
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", optional = true, features = ["env-filter"] }

[features]
binary = ["dep:tracing-subscriber"]

[[bin]]
name = "new_cards"
path = "src/bin/new_cards.rs"
required-features = ["binary"]

[dev-dependencies]
paste = "1.0.14"
tokio = { version = "1.21.2", features = ["macros", "fs", "rt-multi-thread", "rt"] }
